# meshtastic-handler-server

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.sample.yaml  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
src/meshgate/: config.py  server.py
src/meshgate/core/: message_router.py  session.py
src/meshgate/plugins/: gopher_plugin.py  llm_plugin.py  weather_plugin.py
src/meshtastic_handler/: __init__.py  __main__.py  cli.py  config.py  server.py
src/meshtastic_handler/core/: __init__.py  content_chunker.py  message_router.py  plugin_loader.py  plugin_registry.py  session.py  session_manager.py
src/meshtastic_handler/interfaces/: __init__.py  message_transport.py  node_context.py  plugin.py
src/meshtastic_handler/plugins/: __init__.py  base.py  gopher_plugin.py  llm_plugin.py  weather_plugin.py  wikipedia_plugin.py
src/meshtastic_handler/transport/: __init__.py  meshtastic_transport.py
tests/: __init__.py  conftest.py  mocks.py  test_cli.py  test_config.py  test_content_chunker.py  test_message_router.py  test_plugin_interface.py  test_plugin_loader.py  test_plugin_registry.py  test_rate_limiter.py  test_server.py  test_session.py
tests/plugins/: __init__.py  test_base.py  test_gopher_plugin.py  test_llm_plugin.py  test_weather_plugin.py  test_wikipedia_plugin.py
